--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -15,9 +15,9 @@ input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
 input:-webkit-autofill:active,
 input:-internal-autofill-selected {
-  -webkit-box-shadow: 0 0 0 100px #141b2d inset;
-  -webkit-text-fill-color: #fff;
-  caret-color: #fff;
+  -webkit-box-shadow: 0 0 0 100px #ffffff00 inset;
+  -webkit-text-fill-color: #7a7979;
+  caret-color: #ffffff;
   border-top-left-radius: inherit;
   border-top-right-radius: inherit;
 }
@@ -32,17 +32,22 @@ input:-internal-autofill-selected {
   gap: 20px;
 }
 
-::-webkit-scrollbar-thumb {
+body::-webkit-scrollbar-thumb {
   border-radius: 3px;
+  // background-color: #3e4396;
+  border: 1px solid #3e4396;
+}
+
+body::-webkit-scrollbar-thumb:hover {
   background-color: #3e4396;
 }
 
-::-webkit-scrollbar {
+body::-webkit-scrollbar {
   width: 6px;
   height: 6px;
 }
 
-::-webkit-scrollbar-track {
+body::-webkit-scrollbar-track {
   margin: 2px 0;
   background-color: transparent;
 }
