--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -32,22 +32,22 @@ input:-internal-autofill-selected {
   gap: 20px;
 }
 
-body::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb {
   border-radius: 3px;
   // background-color: #3e4396;
   border: 1px solid #3e4396;
 }
 
-body::-webkit-scrollbar-thumb:hover {
+::-webkit-scrollbar-thumb:hover {
   background-color: #3e4396;
 }
 
-body::-webkit-scrollbar {
+::-webkit-scrollbar {
   width: 6px;
   height: 6px;
 }
 
-body::-webkit-scrollbar-track {
+::-webkit-scrollbar-track {
   margin: 2px 0;
   background-color: transparent;
 }
